--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,33 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@layer components {
+  .navbar-link {
+    @apply lg:mr-48px hover:text-primary font-semibold;
+  }
 
-* {
-  box-sizing: border-box;
+  .navbar-section-link {
+    @apply text-2xl my-3 lg:text-base lg:my-0;
+  }
+
+  .button {
+    @apply px-6 rounded-full font-semibold;
+  }
+
+  .primary-button {
+    @apply bg-primary text-white rounded-full;
+  }
+
+  .secondary-button {
+    @apply bg-white text-black border border-gray-400 hover:border-gray-900;
+  }
+
+  .big-button {
+    @apply py-4 px-10;
+  }
+
+  .hero-brand-logo {
+    @apply w-auto h-8 mb-12 md:mb-0;
+  }
 }
