change default font to Open Sans

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,4 +30,8 @@
   .hero-brand-logo {
     @apply w-auto h-8 mb-12 md:mb-0;
   }
+
+  .remove-button-outline {
+    @apply focus:outline-none;
+  }
 }
